; ModuleID = '/home/carl/AnghaBench/systemd/src/locale/extr_keymap-util.c_systemd_language_fallback_map.c'
source_filename = "/home/carl/AnghaBench/systemd/src/locale/extr_keymap-util.c_systemd_language_fallback_map.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [30 x i8] c"SYSTEMD_LANGUAGE_FALLBACK_MAP\00", align 1
@SYSTEMD_LANGUAGE_FALLBACK_MAP = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* ()* @systemd_language_fallback_map to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @systemd_language_fallback_map() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i8*, align 8
  %3 = call i8* @getenv(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  store i8* %3, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = icmp ne i8* %4, null
  br i1 %5, label %6, label %8

6:                                                ; preds = %0
  %7 = load i8*, i8** %2, align 8
  store i8* %7, i8** %1, align 8
  br label %10

8:                                                ; preds = %0
  %9 = load i8*, i8** @SYSTEMD_LANGUAGE_FALLBACK_MAP, align 8
  store i8* %9, i8** %1, align 8
  br label %10

10:                                               ; preds = %8, %6
  %11 = load i8*, i8** %1, align 8
  ret i8* %11
}

declare dso_local i8* @getenv(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
